apps/clipper/service-clipper.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clipper
  name: clipper
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: clipper
