apps/clipper/ingress-clipper.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clipper
spec:
  ingressClassName: cilium
  rules:
  - host: clipper.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: clipper
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - clipper.almothana.xyz
      secretName: almothana-xyz-tls
